test-data/unit/check-typelevel-basic.test
[case testTypeOperatorIsSub]
from typing import IsSub

# Ternary syntax should be converted to _Cond[condition, true_type, false_type]
x: IsSub[int, object]
reveal_type(x)  # N: Revealed type is "Literal[True]"

y: IsSub[int, str]
reveal_type(y)  # N: Revealed type is "Literal[False]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorTernarySyntax]
from typing import IsSub

# Ternary syntax should be converted to _Cond[condition, true_type, false_type]
x: str if IsSub[int, object] else int

x = 0  # E: Incompatible types in assignment (expression has type "int", variable has type "str")

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorInGenericClass]
# Test type operators in generic class context
from typing import Generic, TypeVar, IsSub

T = TypeVar('T')

class MyClass(Generic[T]):
    attr: str if IsSub[T, int] else float

    def method(self, x: list[T] if IsSub[T, str] else T) -> None:
        pass

x: MyClass[int]
reveal_type(x.attr)  # N: Revealed type is "builtins.str"
x.method(0)
x.method([0])  # E: Argument 1 to "method" of "MyClass" has incompatible type "list[int]"; expected "int"

y: MyClass[object]
reveal_type(y.attr)  # N: Revealed type is "builtins.float"
y.method(0)
y.method([0])

z: MyClass[str]
reveal_type(z.attr)  # N: Revealed type is "builtins.float"
z.method('0')  # E: Argument 1 to "method" of "MyClass" has incompatible type "str"; expected "list[str]"
z.method(['0'])


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorNestedTernary]
# Test nested ternary expressions
from typing import IsSub

# Nested ternary should work
z: int if IsSub[int, str] else (float if IsSub[float, object] else str)
z = 'xxx'  # E: Incompatible types in assignment (expression has type "str", variable has type "float")

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorMultipleTypeArgs]
# Test type operators with various argument types
from typing import Generic, TypeVar, IsSub

T = TypeVar('T')
U = TypeVar('U')

class Container(Generic[T, U]):
    # Complex conditional with multiple type variables
    value: list[U] if IsSub[T, int] else tuple[T, U]

x: Container[int, bool]
reveal_type(x.value)  # N: Revealed type is "builtins.list[builtins.bool]"

y: Container[str, bool]
reveal_type(y.value)  # N: Revealed type is "tuple[builtins.str, builtins.bool]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall0]
# Test type operators in function signatures
from typing import TypeVar, IsSub

T = TypeVar('T')

# XXX: resolving this seems basically impossible!!
def process(
    x: bytes if IsSub[T, str] else T,
    y: str if IsSub[T, int] else float
) -> int if IsSub[T, list[object]] else str:
    ...

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall1]
# flags: --python-version 3.14
# Test type operators in function signatures
from typing import IsSub

def process[T](x: T) -> IsSub[T, str]:
    ...

reveal_type(process(0))  # N: Revealed type is "Literal[False]"
reveal_type(process('test'))  # N: Revealed type is "Literal[True]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall2]
# flags: --python-version 3.14

# Test a type operator in an *argument*, but one that should be resolvable
# No sweat!!
from typing import Callable, IsSub, Literal

def process[T](x: T, y: IsSub[T, str]) -> None:
    ...

process(0, False)
process(0, True)  # E: Argument 2 to "process" has incompatible type "Literal[True]"; expected "Literal[False]"
process('test', False)  # E: Argument 2 to "process" has incompatible type "Literal[False]"; expected "Literal[True]"
process('test', True)

x0: Callable[[int, Literal[False]], None] = process
x1: Callable[[int, Literal[True]], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[T, typing.IsSub[T, str]], None]", variable has type "Callable[[int, Literal[True]], None]")
x2: Callable[[str, Literal[False]], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[T, typing.IsSub[T, str]], None]", variable has type "Callable[[str, Literal[False]], None]")
x3: Callable[[str, Literal[True]], None] = process


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorCall3]
# flags: --python-version 3.14

# Test a type operator in an *argument*, but one that should be resolvable
# No sweat!!
from typing import Callable, IsSub, Literal

def process[T](x: IsSub[T, str], y: T) -> None:
    ...

process(False, 0)
process(True, 0)  # E: Argument 1 to "process" has incompatible type "Literal[True]"; expected "Literal[False]"
process(False, 'test')  # E: Argument 1 to "process" has incompatible type "Literal[False]"; expected "Literal[True]"
process(True, 'test')

x0: Callable[[Literal[False], int], None] = process
x1: Callable[[Literal[True], int], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[typing.IsSub[T, str], T], None]", variable has type "Callable[[Literal[True], int], None]")
x2: Callable[[Literal[False], str], None] = process  # E: Incompatible types in assignment (expression has type "Callable[[typing.IsSub[T, str], T], None]", variable has type "Callable[[Literal[False], str], None]")
x3: Callable[[Literal[True], str], None] = process

reveal_type(process)  # N: Revealed type is "def [T] (x: typing.IsSub[T`-1, builtins.str], y: T`-1)"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorInTypeAlias]
# flags: --python-version 3.14
# Test type operators in type aliases (using concrete types to avoid unbound typevar issues)
from typing import IsSub

# Type alias using _Cond with concrete types
type ConditionalType = str if IsSub[int, object] else bytes
z: ConditionalType = b'lol'  # E: Incompatible types in assignment (expression has type "bytes", variable has type "str")


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGenericTypeAlias]
# flags: --python-version 3.14
# Test generic type alias with conditional type
from typing import IsSub

type IntOptional[T] = T | None if IsSub[T, int] else T

x0: IntOptional[int]
reveal_type(x0)  # N: Revealed type is "builtins.int | None"

x1: IntOptional[str]
reveal_type(x1)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorFromUnion]
# flags: --python-version 3.10
# Test FromUnion operator
from typing import FromUnion

x: FromUnion[int | str | float]
reveal_type(x)  # N: Revealed type is "tuple[builtins.int, builtins.str, builtins.float]"

# Non-union becomes 1-tuple
y: FromUnion[int]
reveal_type(y)  # N: Revealed type is "tuple[builtins.int]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringConcat]
# flags: --python-version 3.10
# Test string concatenation operator
from typing import Concat, Literal

x: Concat[Literal["hello"], Literal["world"]]
reveal_type(x)  # N: Revealed type is "Literal['helloworld']"

y: Concat[Literal['a'] | Literal['b'], Literal['c'] | Literal['d']]
reveal_type(y)  # N: Revealed type is "Literal['ac'] | Literal['ad'] | Literal['bc'] | Literal['bd']"

z: Concat[Literal['a', 'b'], Literal['c', 'd']]
reveal_type(z)  # N: Revealed type is "Literal['ac'] | Literal['ad'] | Literal['bc'] | Literal['bd']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringUppercase]
# Test string case operators
from typing import Uppercase, Lowercase, Capitalize, Uncapitalize, Literal

x1: Uppercase[Literal["hello"]]
reveal_type(x1)  # N: Revealed type is "Literal['HELLO']"

x2: Lowercase[Literal["HELLO"]]
reveal_type(x2)  # N: Revealed type is "Literal['hello']"

x3: Capitalize[Literal["hello"]]
reveal_type(x3)  # N: Revealed type is "Literal['Hello']"

x4: Uncapitalize[Literal["HELLO"]]
reveal_type(x4)  # N: Revealed type is "Literal['hELLO']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorStringSlice]
# Test string slice operator
from typing import Slice, Literal

x1: Slice[Literal["hello"], Literal[1], Literal[4]]
reveal_type(x1)  # N: Revealed type is "Literal['ell']"

x2: Slice[Literal["hello"], Literal[0], Literal[2]]
reveal_type(x2)  # N: Revealed type is "Literal['he']"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorLength]
# Test Length operator
from typing import Length, Literal, Tuple

x: Length[tuple[int, str, float]]
reveal_type(x)  # N: Revealed type is "Literal[3]"

y: Length[tuple[int]]
reveal_type(y)  # N: Revealed type is "Literal[1]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg1]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

# Get first type arg
x: GetArg[MyGeneric[int, str], MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[MyGeneric[int, str], MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

# Works with list
z: GetArg[list[float], list, Literal[0]]
reveal_type(z)  # N: Revealed type is "builtins.float"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg2]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

class Concrete(MyGeneric[int, str]):
    pass

# Get first type arg
x: GetArg[Concrete, MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[Concrete, MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorGetArg3]
# Test GetArg operator
from typing import Generic, TypeVar, GetArg, GetArgs, Literal

T = TypeVar('T')
U = TypeVar('U')

class MyGeneric(Generic[T, U]):
    pass

class MyGeneric2(MyGeneric[T, str]):
    pass

class Concrete(MyGeneric2[int]):
    pass

# Get first type arg
x: GetArg[Concrete, MyGeneric, Literal[0]]
reveal_type(x)  # N: Revealed type is "builtins.int"

# Get second type arg
y: GetArg[Concrete, MyGeneric, Literal[1]]
reveal_type(y)  # N: Revealed type is "builtins.str"

args: GetArgs[Concrete, MyGeneric]
reveal_type(args)  # N: Revealed type is "tuple[builtins.int, builtins.str]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionBasicTy]
# flags: --python-version 3.14
# Test basic type comprehension
from typing import IsSub, Iter

class A[*T]:
    pass

# Basic comprehension - maps over tuple elements
def f(x: A[*[T for T in Iter[tuple[int, str, float]]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: __main__.A[builtins.int, builtins.str, builtins.float])"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionBasic]
# Test basic type comprehension
from typing import IsSub, Iter

# Basic comprehension - maps over tuple elements
def f(x: tuple[*[T for T in Iter[tuple[int, str, float]]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: tuple[builtins.int, builtins.str, builtins.float])"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionWithCondition]
# Test type comprehension with filtering condition
from typing import IsSub, Iter

# Filter elements - only keep subtypes of int (int, bool)
def f(x: tuple[*[T for T in Iter[tuple[int, str, bool, float]] if IsSub[T, int]]]) -> None:
    pass

reveal_type(f)  # N: Revealed type is "def (x: tuple[builtins.int, builtins.bool])"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionTransform]
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
x: tuple[*[Uppercase[T] for T in Iter[tuple[Literal["a"], Literal["b"], Literal["c"]]]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeComprehensionAlias1]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
type A = tuple[*[Uppercase[T] for T in Iter[tuple[Literal["a"], Literal["b"], Literal["c"]]]]]
x: A
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionAlias2]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# Transform elements
type Trans[U] = tuple[*[Uppercase[T] for T in Iter[U]]]
x: Trans[tuple[Literal["a"], Literal["b"], Literal["c"]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeComprehensionAlias3]
# flags: --python-version 3.14
# Test type comprehension with element transformation
from typing import Uppercase, Literal, Iter

# XXX: DECISION: Should shadowing be allowed?

# Transform elements
type Trans[T] = tuple[*[Uppercase[T] for T in Iter[T]]]  # E: "T" already defined as a type parameter
x: Trans[tuple[Literal["a"], Literal["b"], Literal["c"]]]
reveal_type(x)  # N: Revealed type is "tuple[Literal['A'], Literal['B'], Literal['C']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType0]
# flags: --python-version 3.14

from typing import IsSub

def process[T](x: IsSub[T, str], y: IsSub[T, int]) -> None:
    x = y  # E: Incompatible types in assignment (expression has type "typing.IsSub[T, int]", variable has type "typing.IsSub[T, str]")


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType1]
# flags: --python-version 3.14

from typing import Callable, IsSub, Literal

class A:
    def process[T](self, x: IsSub[T, str], y: T) -> None:
        ...


class B(A):
    pass


class C(A):
    def process[T](self, x: IsSub[T, str], y: T) -> None:
        ...

class D(A):
    def process[T](self, x: IsSub[T, int], y: T) -> None:  # E: Argument 1 of "process" is incompatible with supertype "A"; supertype defines the argument type as "typing.IsSub[T, str]" \
                                                           # N: This violates the Liskov substitution principle \
                                                           # N: See https://mypy.readthedocs.io/en/stable/common_issues.html#incompatible-overrides
        ...


class E(A):
    def process[T](self, x: str, y: T) -> None:  # E: Argument 1 of "process" is incompatible with supertype "A"; supertype defines the argument type as "typing.IsSub[T, str]" \
                                                 # N: This violates the Liskov substitution principle \
                                                 # N: See https://mypy.readthedocs.io/en/stable/common_issues.html#incompatible-overrides
        ...


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorSubType2]
# flags: --python-version 3.14

from typing import Callable, IsSub, Literal

class A:
    def process[T](self, y: T) -> IsSub[T, str]:
        ...


class B(A):
    pass


class C(A):
    def process[T](self, y: T) -> IsSub[T, str]:
        ...


class D(A):
    def process[T](self, y: T) -> IsSub[T, int]:  # E: Return type "typing.IsSub[T, int]" of "process" incompatible with return type "typing.IsSub[T, str]" in supertype "A"
        ...


class E(A):
    def process[T](self, y: T) -> str:  # E: Return type "str" of "process" incompatible with return type "typing.IsSub[T, str]" in supertype "A"
        ...


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorSubType3]
# flags: --python-version 3.14

from typing import Callable, IsSub, Literal, Iter

class A:
    def process[Ts](self, x: Ts) -> tuple[*[t for t in Iter[Ts]]]:
        ...


class B(A):
    pass


# alpha varying
class C(A):
    def process[Us](self, x: Us) -> tuple[*[s for s in Iter[Us]]]:
        ...


class D(A):
    def process[Ts](self, x: Ts) -> tuple[*[int for s in Iter[Ts]]]:  # E: Signature of "process" incompatible with supertype "A" \
                                                                      # N:      Superclass: \
                                                                      # N:          def [Ts] process(self, x: Ts) -> tuple[*[t for t in typing.Iter[Ts]]] \
                                                                      # N:      Subclass: \
                                                                      # N:          def [Ts] process(self, x: Ts) -> tuple[*[int for s in typing.Iter[Ts]]]
        ...

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorJoin1]
# flags: --python-version 3.14

from typing import Callable, IsSub


def f0[T](x: IsSub[T, str], y: IsSub[T, str]) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[typing.IsSub[T`-1, builtins.str]]"

def f1[T](x: IsSub[T, str], y: IsSub[T, str] | None) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[typing.IsSub[T`-1, builtins.str] | None]"

def g[T](x: IsSub[T, str], y: IsSub[T, int]) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[builtins.object]"


[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]


[case testTypeOperatorMeet1]
# flags: --python-version 3.14

from typing import Callable, IsSub

def g[T](
    x: Callable[[IsSub[T, str]], None],
    x0: Callable[[IsSub[T, str]], None],
    y: Callable[[IsSub[T, int]], None],
) -> None:
    z = [x, y]
    reveal_type(z)  # N: Revealed type is "builtins.list[builtins.function]"

    w = [x, x0]
    reveal_type(w)  # N: Revealed type is "builtins.list[def (typing.IsSub[T`-1, builtins.str])]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]

[case testTypeOperatorTypedDictParam]
# flags: --python-version 3.14

from typing import Callable, Attrs, GetName, TypedDict, Iter

class BaseTypedDict(TypedDict):
    pass


def foo[T: BaseTypedDict](x: T) -> tuple[
    *[GetName[m] for m in Iter[Attrs[T]]]
]:
    return tuple(x.keys())  # type: ignore


class Sigh(TypedDict):
    x: int
    y: str


td: Sigh = {'x': 10, 'y': 'hmmm'}
x = foo(td)
reveal_type(x)  # N: Revealed type is "tuple[Literal['x'], Literal['y']]"

[builtins fixtures/typelevel.pyi]
[typing fixtures/typing-full.pyi]
